# first-rust-workspace

./: .gitignore  Cargo.toml  README.md  install_oxygen.sh  requirements.txt
python/: main.py
src/: main.rs
src/app/: start_dev.sh
src/app/client/: Cargo.toml
src/app/client/src/: main.rs
src/app/server/: Cargo.toml
src/app/server/src/: main.rs  server.rs
src/app/types/src/: lib.rs
src/core/: Cargo.toml  history.rs  mod.rs  my_shell.rs
src/core/llm/: openai.rs
src/core/src/: my_shell.rs
src/core/src/llm/: openai.rs
src/crates/misc/conway/: Cargo.toml
src/crates/misc/conway/benches/: algo_comparison.rs
src/crates/misc/conway/src/: camera.rs  lib.rs  main.rs
src/crates/misc/conway/src/game_of_life/: camera.rs  game.rs  mod.rs  plugin.rs  slice.rs
src/crates/misc/conway/src/patterns/: 1_still.txt  2_spaceship.txt
src/crates/misc/conway/src/ui/: main_menu.rs  mod.rs
src/crates/misc/first-crate/: Cargo.toml
src/crates/misc/first-crate/src/: lib.rs  my_shell.rs
src/crates/services/openai/: Cargo.toml
src/crates/services/openai/src/: chat.rs  lib.rs
src/nu-plugin/: Cargo.toml  create.nu  install.nu
src/nu-plugin/nu_plugin_example/: Cargo.toml
src/nu-plugin/nu_plugin_example/src/: main.rs
src/nu-plugin/nu_plugin_hello/: Cargo.toml
src/nu-plugin/nu_plugin_hello/src/: main.rs
src/nu-plugin/nu_plugin_llm/: Cargo.toml
src/nu-plugin/nu_plugin_llm/src/: main.rs
src/web/: server.rs
