[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.2"
dirs = "5.0.1"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = {version = "1.0.194", features = ["derive"]}
serde_json = "1.0.110"
futures = "0.3.30"
